# epex-proxy

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  compose.yaml  config.json  openapi.yaml
.github/workflows/: build.yml  docker.yml  package.yml
debian/: postinst  postrm  prerm
docker/: Caddyfile  caddy.Dockerfile  config.json
src/: calculator.cpp  calculator.hpp  config.cpp  config.hpp  entsoe.cpp  entsoe.hpp  main.cpp  parser.cpp  parser.hpp  scheduler.cpp  scheduler.hpp  store.cpp  store.hpp  time_util.cpp  time_util.hpp
src/http/: handlers.cpp  handlers.hpp  server.cpp  server.hpp
systemd/: epex-proxy.service.in
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css  main.js
ui/src/lib/: PriceChart.svelte  api.js
